download file solved with unsuitable way to download the file. Ref #2122
