# src/main/resources/webroot/swagger.yaml
@@ -462,6 +462,49 @@ paths:
           $ref: '#/components/responses/401NotAuthorized'
         500:
           $ref: '#/components/responses/500InternalError'
+  /api/dataassets/getResource/{dataSourceType}/{dataAssetId}/{distributionId}:
+    get:
+      security:
+        - bearerAuth: [ ]
+      tags:
+        - resources
+      description: Endpoint getting a file link of data asset to the connector.
+      summary: get file
+      operationId: getResourceLink
+      parameters:
+        - in: path
+          name: dataSourceType
+          description: data source name
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: dataAssetId
+          description: id of data asset
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: distributionId
+          description: id of distribution
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        200:
+          description: link of the required distribution.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  link:
+                    type: string
+        401:
+          $ref: '#/components/responses/401NotAuthorized'
+        500:
+          $ref: '#/components/responses/500InternalError'
 
   # Data Sources
 
